--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -2,14 +2,14 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
     <li class="breadcrumb-item"><a routerLink="/catehories">Categorias</a></li>
-    <li class="breadcrumb-item active"><span>Formulário de categorias</span></li>
+    <li class="breadcrumb-item active"><span>{{pageTitle}}</span></li>
   </ol>
 </nav>
 
 <div class="row mb-4">
   <div class="col-md">
     <h1 class="h2 border-left pl-2">
-      Formulário de categoria
+      {{pageTitle}}
     </h1>
   </div>
   <div class="col-md">
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<form [formGroup] = "categoryForm">
+<form [formGroup] = "categoryForm" (submit)="submitForm()">
 
   <div class="card mb-3">
     <div class="card-header">
@@ -29,16 +29,21 @@
       <div class="form-row">
         <div class="form-group col-md-4">
             <label for="name">Nome</label>
-            <input type="text" class="form-control" id="name"/>
+            <input type="text" class="form-control" id="name" formControlName="name"/>
+            <div class="text-danger" *ngIf="categoryForm.get('name').touched && categoryForm.get('name').invalid">
+              <div *ngIf="categoryForm.get('name').errors.required">dado obrigatório</div>
+              <div *ngIf="categoryForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
+              <div *ngIf="categoryForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
+            </div>
         </div>
         <div class="form-group col-md-8">
             <label for="description">Descrição</label>
-            <input type="text" class="form-control" id="description"/>
+            <input type="text" class="form-control" id="description" formControlName="description"/>
         </div>
       </div>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
+  <button [disabled]="submittingForm || categoryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
 
 </form>
