--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,7 +1,7 @@
 <nav class="mb-5">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-    <li class="breadcrumb-item"><a routerLink="/catehories">Categorias</a></li>
+    <li class="breadcrumb-item"><a routerLink="/categories">Categorias</a></li>
     <li class="breadcrumb-item active"><span>{{pageTitle}}</span></li>
   </ol>
 </nav>
