--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<form [formGroup] = "categoryForm" (submit)="submitForm()">
+<form [formGroup] = "resourceForm" (submit)="submitForm()">
 
   <div class="card mb-3">
     <div class="card-header">
@@ -30,10 +30,10 @@
         <div class="form-group col-md-4">
             <label for="name">Nome</label>
             <input type="text" class="form-control" id="name" formControlName="name"/>
-            <div class="text-danger" *ngIf="categoryForm.get('name').touched && categoryForm.get('name').invalid">
-              <div *ngIf="categoryForm.get('name').errors.required">dado obrigatório</div>
-              <div *ngIf="categoryForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
-              <div *ngIf="categoryForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
+            <div class="text-danger" *ngIf="resourceForm.get('name').touched && resourceForm.get('name').invalid">
+              <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+              <div *ngIf="resourceForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
+              <div *ngIf="resourceForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
             </div>
         </div>
         <div class="form-group col-md-8">
@@ -51,6 +51,6 @@
     </ul>
   </div>
 
-  <button [disabled]="submittingForm || categoryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
+  <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
 
 </form>
