--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<form [formGroup] = "entryForm" (submit)="submitForm()">
+<form [formGroup] = "resourceForm" (submit)="submitForm()">
 
   <div class="card mb-3">
     <div class="card-header">
@@ -34,18 +34,18 @@
           <select class="form-control" id="type" formControlName="type">
             <option *ngFor="let option of typeOptions" [value]="option.value">{{option.text}}</option>            
           </select>
-          <div class="text-danger" *ngIf="entryForm.get('type').touched && entryForm.get('type').invalid">
-            <div *ngIf="entryForm.get('type').errors.required">dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('type').touched && resourceForm.get('type').invalid">
+            <div *ngIf="resourceForm.get('type').errors.required">dado obrigatório</div>
           </div>            
         </div>        
         <!-- NAME -->
         <div class="form-group col-md-5">
             <label for="name">Lançamento</label>
             <input type="text" class="form-control" id="name" formControlName="name"/>
-            <div class="text-danger" *ngIf="entryForm.get('name').touched && entryForm.get('name').invalid">
-              <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
-              <div *ngIf="entryForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
-              <div *ngIf="entryForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
+            <div class="text-danger" *ngIf="resourceForm.get('name').touched && resourceForm.get('name').invalid">
+              <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+              <div *ngIf="resourceForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
+              <div *ngIf="resourceForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
             </div>            
         </div>
         <!-- AMOUNT -->
@@ -57,8 +57,8 @@
               </div>
               <input type="text" class="form-control text-right" id="amount" formControlName="amount" [imask]="imaskConfig"/>
             </div>            
-            <div class="text-danger" *ngIf="entryForm.get('amount').touched && entryForm.get('amount').invalid">
-              <div *ngIf="entryForm.get('amount').errors.required">dado obrigatório</div>
+            <div class="text-danger" *ngIf="resourceForm.get('amount').touched && resourceForm.get('amount').invalid">
+              <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
             </div>            
         </div>
         <!-- DATE -->
@@ -73,8 +73,8 @@
               [locale]="ptBR"
               [showButtonBar]="true">            
             </p-calendar>
-            <div class="text-danger" *ngIf="entryForm.get('date').touched && entryForm.get('date').invalid">
-              <div *ngIf="entryForm.get('date').errors.required">dado obrigatório</div>
+            <div class="text-danger" *ngIf="resourceForm.get('date').touched && resourceForm.get('date').invalid">
+              <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
             </div>            
         </div>
       </div>
@@ -85,11 +85,11 @@
         <div class="form-group col-md-2">
             <label for="paid">Pago</label>
             <div class="btn-group">
-              <label (click)="entryForm.get('paid').setValue(true)" [class.active]="entryForm.get('paid').value==true" class="btn btn-outline-info">Pago</label>
-              <label (click)="entryForm.get('paid').setValue(false)" [class.active]="entryForm.get('paid').value==false" class="btn btn-outline-info">Pendente</label>
+              <label (click)="resourceForm.get('paid').setValue(true)" [class.active]="resourceForm.get('paid').value==true" class="btn btn-outline-info">Pago</label>
+              <label (click)="resourceForm.get('paid').setValue(false)" [class.active]="resourceForm.get('paid').value==false" class="btn btn-outline-info">Pendente</label>
             </div>
-            <div class="text-danger" *ngIf="entryForm.get('paid').touched && entryForm.get('paid').invalid">
-              <div *ngIf="entryForm.get('paid').errors.required">dado obrigatório</div>
+            <div class="text-danger" *ngIf="resourceForm.get('paid').touched && resourceForm.get('paid').invalid">
+              <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
             </div>            
         </div>
 
@@ -99,8 +99,8 @@
           <select class="form-control" id="categoryId" formControlName="categoryId">
             <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>            
           </select>
-          <div class="text-danger" *ngIf="entryForm.get('categoryId').touched && entryForm.get('categoryId').invalid">
-            <div *ngIf="entryForm.get('categoryId').errors.required">dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('categoryId').touched && resourceForm.get('categoryId').invalid">
+            <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
           </div>            
         </div> 
 
@@ -121,6 +121,6 @@
     </ul>
   </div>
 
-  <button [disabled]="submittingForm || entryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
+  <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
 
 </form>
