--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,5 +1,8 @@
 <app-bread-crumb [items]="[{text: 'Categorias', link: '/categories'}, {text: pageTitle}]"></app-bread-crumb>
 
+<app-page-header [page-title]="pageTitle" button-text="<< Voltar" button-link="/categories" button-class="btn-light"></app-page-header>
+
+<!--
 <div class="row mb-4">
   <div class="col-md">
     <h1 class="h2 border-left pl-2">
@@ -12,6 +15,7 @@
     </a>  
   </div>
 </div>
+-->
 
 <form [formGroup] = "resourceForm" (submit)="submitForm()">
 
