--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -2,21 +2,6 @@
 
 <app-page-header [page-title]="pageTitle" button-text="<< Voltar" button-link="/categories" button-class="btn-light"></app-page-header>
 
-<!--
-<div class="row mb-4">
-  <div class="col-md">
-    <h1 class="h2 border-left pl-2">
-      {{pageTitle}}
-    </h1>
-  </div>
-  <div class="col-md">
-    <a routerLink="/categories" class="btn btn-light float-right">
-      <span><< Voltar</span>
-    </a>  
-  </div>
-</div>
--->
-
 <form [formGroup] = "resourceForm" (submit)="submitForm()">
 
   <div class="card mb-3">
@@ -28,15 +13,12 @@
         <div class="form-group col-md-4">
             <label for="name">Nome</label>
             <input type="text" class="form-control" id="name" formControlName="name"/>
-            <div class="text-danger" *ngIf="resourceForm.get('name').touched && resourceForm.get('name').invalid">
-              <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-              <div *ngIf="resourceForm.get('name').errors.minlength">dado não pode ter menos de 2 caracteres</div>
-              <div *ngIf="resourceForm.get('name').errors.maxlength">dado não pode ter mais que 255 caracteres</div>
-            </div>
+            <app-form-field-error [form-control]="resourceForm.get('name')"></app-form-field-error>
         </div>
         <div class="form-group col-md-8">
             <label for="description">Descrição</label>
             <input type="text" class="form-control" id="description" formControlName="description"/>
+            <app-form-field-error [form-control]="resourceForm.get('description')"></app-form-field-error>
         </div>
       </div>
     </div>
