--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -23,13 +23,8 @@
       </div>
     </div>
   </div>
-
-  <div class="alert alert-danger mb-4" *ngIf="serverErrorMessages">
-    <strong>Erro no servidor:</strong>
-    <ul>
-      <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-    </ul>
-  </div>
+  
+  <app-sever-error-messages [server-error-messages]="serverErrorMessages"></app-sever-error-messages>
 
   <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
 
