--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -11,7 +11,7 @@
     <div class="card-body">
 
       <div class="form-row">
-        
+
         <!-- TYPE -->
         <div class="form-group col-md-2">
           <label for="type">Tipo</label>
@@ -88,13 +88,8 @@
     </div>
   </div>
 
-  <div class="alert alert-danger mb-4" *ngIf="serverErrorMessages">
-    <strong>Erro no servidor:</strong>
-    <ul>
-      <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-    </ul>
-  </div>
-
   <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right">Salvar</button>
 
+  <app-sever-error-messages [server-error-messages]="serverErrorMessages"></app-sever-error-messages>
+  
 </form>
