--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-4">
-  <div class="col-md-9">
+  <div [class.col-md-9]="showButton" [class.col-md]="!showButton">
     <h1 class="h2 border-left pl-2">
       {{pageTitle}}
     </h1>
