--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -54,7 +54,7 @@
     </div>
     <div class="card-body">
       <h3 class="card-title">
-        15000
+        {{revenueTotal}}
       </h3>
     </div>
   </div>
@@ -64,7 +64,7 @@
       </div>
       <div class="card-body">
         <h3 class="card-title">
-          7900
+          {{expenseTotal}}
         </h3>
       </div>
   </div>  
@@ -74,7 +74,7 @@
       </div>
       <div class="card-body">
         <h3 class="card-title">
-          7100
+          {{balance}}
         </h3>
       </div>
   </div>  
@@ -84,9 +84,9 @@
 
 <div class="row mt-5 mb-4">
   <div class="col-md-6">
-    GRÁFICO DE RECEITAS
+    <p-chart type="bar" [data]="revenueChartData" [options]="chartOptions"></p-chart>
   </div>
   <div class="col-md-6">
-    GRÁFICO DE DESPESAS
+    <p-chart type="bar" [data]="expenseChartData" [options]="chartOptions"></p-chart>
   </div>
 </div>
